--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ Requires at least: WordPress 5.0
 Version: 1.0
 */
 
-/* Style du header */
+/**********************************************************HEADER**********************************************************/
 
 .site-header {
     background-color: #fff; /* Fond blanc */
@@ -88,19 +88,19 @@ Version: 1.0
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        width: 30px;
-        height: 25px;
+        width: 27px;
+        height: 18px;
         cursor: pointer;
         position: absolute;
         top: 50%;
-        right: 20px;
+        right: 20%;
         transform: translateY(-50%);
         z-index: 1001;
     }
 
     .burger-bar {
-        width: 30px;
-        height: 4px;
+        width: 27.42px;
+        height: 1.71px;
         background-color: black;
         transition: all 0.3s ease-in-out;
         border-radius: 2px;
@@ -108,7 +108,7 @@ Version: 1.0
 
     /* Animation burger -> croix */
     .menu-toggle.open .burger-bar:nth-child(1) {
-        transform: translateY(10px) rotate(45deg);
+        transform: translateY(8px) rotate(45deg);
     }
 
     .menu-toggle.open .burger-bar:nth-child(2) {
@@ -116,7 +116,7 @@ Version: 1.0
     }
 
     .menu-toggle.open .burger-bar:nth-child(3) {
-        transform: translateY(-10px) rotate(-45deg);
+        transform: translateY(-8px) rotate(-45deg);
     }
 
     /* Menu mobile ouvert */
@@ -161,5 +161,64 @@ Version: 1.0
         text-decoration: none;
         text-align: center;
         display: block;
+    }
+}
+
+/******************************************************FOOTER********************************************************/
+
+.site-footer {
+    width: 100%;
+    height: 40px;
+    background-color: #ffffff;
+    border-top: 1px solid #000000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-menu {
+    display: flex;
+    gap: 30px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.footer-menu li {
+    font-family: 'Space Mono', monospace;
+    font-weight: 400;
+    font-size: 16px;
+    text-transform: uppercase;
+}
+
+.footer-menu a {
+    text-decoration: none;
+    color: #000000;
+}
+
+.copyright {
+    font-family: 'Space Mono', monospace;
+    font-weight: 400;
+    font-size: 16px;
+    text-transform: uppercase;
+    margin-left: 30px;
+}
+
+/* Version mobile */
+@media (max-width: 768px) {
+    .site-footer {
+        height: auto;
+        padding: 10px 0;
+        flex-direction: column;
+    }
+
+    .footer-menu {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .copyright {
+        margin-top: 10px;
+        text-align: center;
     }
 }
